Fix Layout issues with XmlPasteModalWindow

--- a/implementation/scipamato/scipamato-core-web/src/main/resources/ch/difty/scipamato/web/resources/css/main.css
+++ b/implementation/scipamato/scipamato-core-web/src/main/resources/ch/difty/scipamato/web/resources/css/main.css
@@ -3,3 +3,8 @@
 .newField {
     border-color: #276cdb;
 }
+
+/* Fix DropZone Caption appearance */
+div.wicket-modal div.w_caption {
+    height: 2em;
+}
